--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "dependencies": "^0.0.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.6.3"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
